--- a/atf/build.gradle
+++ b/atf/build.gradle
@@ -33,17 +33,14 @@ dependencies {
 
     // third party libraries
 
+    // EventBus
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
+    // Volley url request lib
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
+
     //BottomNavigationView
     implementation 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
     implementation "com.android.support:design:27.1.1"
-
-    // image loader
-    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-
-    // Toasty    The usual Toast, but with steroids.
-    implementation 'com.github.GrenderG:Toasty:1.3.0'
-
-    // dexter runtime permissions
-    implementation 'com.karumi:dexter:5.0.0'
 
 }
